CSS/style.css
body {
    font-family: 'Anaheim', sans-serif;
    font-size: 16px;
    background-color: black;
}

.column-nopadding {
    padding: 0;
}

.bgimage1 {
    background-image: url('../images/photo1.jpg');
    background-size: 100% 100%;
    height: 50vh;
    opacity: 0.5;
    transition: opacity .30s ease-in-out;
   -moz-transition: opacity .30s ease-in-out;
   -webkit-transition: opacity .30s ease-in-out;
}

.bgimage2 {
    background-image: url('../images/photo2.jpg');
    background-size: 100% 100%;
    height: 50vh;
    opacity: 0.5;
    transition: opacity .30s ease-in-out;
   -moz-transition: opacity .30s ease-in-out;
   -webkit-transition: opacity .30s ease-in-out;
}

.bgimage3 {
    background-image: url('../images/photo3.jpg');
    background-size: 100% 100%;
    height: 50vh;
    opacity: 0.5;
    transition: opacity .30s ease-in-out;
   -moz-transition: opacity .30s ease-in-out;
   -webkit-transition: opacity .30s ease-in-out;
}

.bgimage4 {
    background-image: url('../images/photo4.jpg');
    background-size: 100% 100%;
    height: 50vh;
    opacity: 0.5;
    transition: opacity .30s ease-in-out;
   -moz-transition: opacity .30s ease-in-out;
   -webkit-transition: opacity .30s ease-in-out;
}

.bgimage5 {
    background-image: url('../images/photo5.jpg');
    background-size: 100% 100%;
    height: 50vh;
    opacity: 0.5;
    transition: opacity .30s ease-in-out;
   -moz-transition: opacity .30s ease-in-out;
   -webkit-transition: opacity .30s ease-in-out;
}

.bgimage6 {
    background-image: url('../images/photo6.jpg');
    background-size: 100% 100%;
    height: 50vh;
    opacity: 0.5;
    transition: opacity .30s ease-in-out;
   -moz-transition: opacity .30s ease-in-out;
   -webkit-transition: opacity .30s ease-in-out;
}
.bgimage7 {
    background-image: url('../images/photo7.jpg');
    background-size: 100% 100%;
    height: 50vh;
    opacity: 0.5;
    transition: opacity .30s ease-in-out;
   -moz-transition: opacity .30s ease-in-out;
   -webkit-transition: opacity .30s ease-in-out;
}

.bgimage8 {
    background-image: url('../images/photo8.jpg');
    background-size: 100% 100%;
    height: 50vh;
    opacity: 0.5;
    transition: opacity .30s ease-in-out;
   -moz-transition: opacity .30s ease-in-out;
   -webkit-transition: opacity .30s ease-in-out;
}

.bgimage1:hover, .bgimage2:hover,
.bgimage3:hover, .bgimage4:hover,
.bgimage5:hover, .bgimage6:hover,
.bgimage7:hover, .bgimage8:hover {
    opacity: 0.7;
}

.content {
    position: absolute;
    bottom: 0%;
}

.content-wraper {
    padding: 10px 10px 10px 10px;
}

.comment-count {
    margin-right: 10px;
    margin-bottom: 10px;
}

.excerpt {
    margin-bottom: 10px;
}

.postinfo {
    left:0;
}

.postinfo span {
    float: right;
}

